[package]
name = "pdf-min"
version = "0.1.10"
edition = "2021"
authors = ["George Barwood"]
description = "Very minimal crate for writing PDFs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/georgebarwood/pdf-min/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding_rs = "0.8.31"
flate3 = "1.0.0"
format-bytes = "0.3.0"
html-escape = "0.2.11"