[package]
name = "pdf-min"
version = "0.1.19"
edition = "2024"
authors = ["George Barwood"]
description = "Very minimal crate for writing PDFs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/georgebarwood/pdf-min/"
include = ["/src"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding_rs = "0.8.31"
flate3 = "1.0.0"
format-bytes = "0.3.0"
html-escape = "0.2.11"

[dev-dependencies]
img-parts = "0.4.0"
jpeg-decoder = "0.3.2"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
